some header padding and typography updates

--- a/index.html
+++ b/index.html
@@ -154,31 +154,46 @@
             <div>
         </nav> <!--Page Nav-->
         <div class="banner">
+            <div class="overlay">
+            </div>
             <div class="wrapper">
-                <h1 class="animated slideInUp">advisory business consulting services</h1>
-                <p>We offer consulting expertise in the areas of turnaround management, receiverships, and loan restructuring. Our services,through corporate renewal and revoery, enable a return to profitability.</p>
-                <button>meet our expert</button>
+                <div class="banner-content">
+                    <h1 class="animated slideInUp">advisory business consulting services</h1>
+                    <p>We offer consulting expertise in the areas of turnaround management, receiverships, and loan restructuring. Our services,through corporate renewal and revoery, enable a return to profitability.</p>
+                    <button>
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        meet our expert
+                    </button>
+                </div>
             </div>
         </div> <!--End of Banner-->
     </header>
     <main>
         <article class="about-us">
             <div class="wrapper">
-                <div class="co-description">
-                    <h3>we help</h3>
-                    <h2>Highly collaborative and personalized business transformation consulting</h2>
-                    <p>Our approach includes facilitated workshops, individual interviews, and team reviews - all desgined to foster close collaboration between your tema and our business consultantas, helping us to establish as in-depth understanding of your business and technology requirements as the foundation of our assessment process.</p>
-                    <button>read more</button>
-                </div>
-                <div class="free-consult">
-                    <h3>Our free offer</h3>
-                    <p>
-                        Helping you get the greatest strategic advangtage from your data management environment.
-                    </p>
-                    <p>
-                        We then work with your key stakeholders to develop actionable recommendations along with design
-                    </p>
-                    <button>free consultation</button>
+                <h3>we help</h3>
+                <div class="about-us-stuff">
+                    <div class="co-description">
+                        <h2>Highly collaborative and personalized business transformation consulting</h2>
+                        <p>Our approach includes facilitated workshops, individual interviews, and team reviews - all designed to foster close collaboration between your tema and our business consultantas, helping us to establish as in-depth understanding of your business and technology requirements as the foundation of our assessment process.</p>
+                        <button>
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                            read more
+                        </button>
+                    </div>
+                    <div class="free-consult">
+                        <h3>Our free offer</h3>
+                        <p>
+                            Helping you get the greatest strategic advangtage from your data management environment.
+                        </p>
+                        <p>
+                            We then work with your key stakeholders to develop actionable recommendations along with design
+                        </p>
+                        <button>
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                            free consultation
+                        </button>
+                    </div>
                 </div>
             </div>
         </article>
@@ -294,8 +309,13 @@
                 <div class="projects-title">
                     <h2>What we done</h2>
                     <h3>latest project</h3>
-                    <p>We have done more than 10,000 projects in the short period time and all the projects are done by our expert team with 100% satisfaction.</p>
-                    <button>More Project</button>
+                    <div class="projects-detail">
+                        <p>We have done more than 10,000 projects in the short period time and all the projects are done by our expert team with 100% satisfaction.</p>
+                        <button>
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                            More Project
+                        </button>
+                    </div>
                 </div>
                 <div class="projects-details"></div>
                 <div class="projects-img">
@@ -325,7 +345,10 @@
                 </div>
                 <div class="news-details">
                     <h3>Our most popular rect Blog post. WE have done more than 10,000 projects in the short period time and all the projects are done</h3>  
-                    <button>more news</button>
+                    <button>
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                     more news
+                    </button>
                 </div>
                 <div class="news-article">
                     <div class="third">
