Most CSS is done

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                 <div class="services-title">
                     <h3>What we provide</h3>
                     <h2>our services</h2>
+                    <h6>s</h6>
                 </div>
                 <div class="half">
                     <div class="third">
@@ -249,73 +250,83 @@
                 </div>
                 <div class="rationals">
                     <div class="third">
-                        <img src="" alt="">
-                        <h5>risk management</h5>
+                        <div class="rational-title">
+                            <img src="images/icons/1058656 - document.png" alt="notepad">
+                            <h5>risk management</h5>
+                        </div>
                         <p>Consulting understands that to help meet client challenges</p>
                     </div> <!-- End of 'thid' div-->
                     <div class="third">
-                        <img src="" alt="">
-                        <h5>strategic communication</h5>
+                        <div class="rational-title">
+                            <img src="images/icons/1058684 - analysis.png" alt="linegraph">
+                            <h5>strategic communication</h5>
+                        </div>
                         <p>Consulting understands that to help meet client challenges</p>
                     </div> <!-- End of 'thid' div-->
                     <div class="third">
-                        <img src="" alt="">
-                        <h5>private capital advisory</h5>
+                        <div class="rational-title">
+                            <img src="images/icons/1058678 - arrow bus.png" alt="target">
+                            <h5>private capital advisory</h5>
+                        </div>
                         <p>Consulting understands that to help meet client challenges</p>
                     </div> <!-- End of 'thid' div-->
                 </div>
             </div>
         </article>
         <section class="credentials">
-            <div class="fourth">
-                <div class="icon">
-                    <img src="images/icons/1058675 - digital f.png" alt="vector curve">
+            <div class="outer-wrapper">
+                <div class="fourth">
+                    <div class="icon">
+                        <img src="images/icons/1058675 - digital f.png" alt="vector curve">
+                    </div>
+                    <div class="credential">
+                        <h4>project successfull</h4>
+                        <h3>2684</h3>
+                    </div>
                 </div>
-                <div>
-                    <h4>project successfull</h4>
-                    <h3>2684</h3>
+                <div class="fourth">
+                    <div class="icon">
+                        <img src="images/icons/1058645 - audio lou.png" alt="audio icon">
+                    </div>
+                    <div class="credential">
+                        <h4>experienced consultants</h4>
+                        <h3>3450</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="fourth">
-                <div class="icon">
-                    <img src="images/icons/1058645 - audio lou.png" alt="audio icon">
+                <div class="fourth">
+                    <div class="icon">
+                        <img src="images/icons/1058678 - arrow bus -large.png" alt="target">
+                    </div>
+                    <div class="credential">
+                        <h4>team members</h4>
+                        <h3>125</h3>
+                    </div>
                 </div>
-                <div>
-                    <h4>experienced consultants</h4>
-                    <h3>3450</h3>
-                </div>
-            </div>
-            <div class="fourth">
-                <div class="icon">
-                    <img src="images/icons/1058678 - arrow bus -large.png" alt="target">
-                </div>
-                <div>
-                    <h4>team members</h4>
-                    <h3>125</h3>
-                </div>
-            </div>
-            <div class="fourth">
-                <div class="icon">
-                    <img src="images/icons/1058684 - analysis -large.png" alt="graph">
-                </div>
-                <div>
-                    <h4>avg profit increased</h4>
-                    <h3>75%</h3>
+                <div class="fourth">
+                    <div class="icon">
+                        <img src="images/icons/1058684 - analysis -large.png" alt="graph">
+                    </div>
+                    <div class="credential">
+                        <h4>avg profit increased</h4>
+                        <h3>75%</h3>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="projects">
            <div class="wrapper">
                 <div class="projects-title">
-                    <h2>What we done</h2>
-                    <h3>latest project</h3>
-                    <div class="projects-detail">
-                        <p>We have done more than 10,000 projects in the short period time and all the projects are done by our expert team with 100% satisfaction.</p>
-                        <button>
-                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                            More Project
-                        </button>
-                    </div>
+                    <h3>What we done</h3>
+                    <h2>latest project</h2>
+                    <h6>p</h6>
+                </div>
+                <div class="projects-detail">
+                    <p>We have done more than 10,000 projects in the short period time and all the projects are done by our expert team with
+                        100% satisfaction.</p>
+                    <button>
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        More Project
+                    </button>
                 </div>
                 <div class="projects-details"></div>
                 <div class="projects-img">
@@ -342,6 +353,7 @@
                 <div class="news-title">
                     <h3>from our blog</h3>
                     <h2>latest news</h2>
+                    <h6>b</h6>
                 </div>
                 <div class="news-details">
                     <h3>Our most popular rect Blog post. WE have done more than 10,000 projects in the short period time and all the projects are done</h3>  
