CSS done, working on responsiveness

--- a/index.html
+++ b/index.html
@@ -154,8 +154,6 @@
             <div>
         </nav> <!--Page Nav-->
         <div class="banner">
-            <div class="overlay">
-            </div>
             <div class="wrapper">
                 <div class="banner-content">
                     <h1 class="animated slideInUp">advisory business consulting services</h1>
@@ -164,6 +162,14 @@
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                         meet our expert
                     </button>
+                </div>
+            </div>
+            <div class="banner-nav">
+                <div class="arrow">
+                    <i class="fa fa-angle-left" aria-hidden="true"></i>
+                </div>
+                <div class="arrow">
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </div>
             </div>
         </div> <!--End of Banner-->
@@ -232,6 +238,38 @@
                             <p>Helping you get the greatest strategic advantage from your data management environemnt.</p>
                         </div>
                     </div> <!-- End of 'thid' div-->
+                </div>
+                <div class="half">
+                    <div class="third">
+                        <div class="service-icon">
+                            <img src="images/icons/2404044 - calendar date every day grid month schedule year.png" alt="calendar icon">
+                        </div>
+                        <div class="service-details">
+                            <h4>business growth</h4>
+                            <p>Helping you get the greatest strategic advantage from your data management environment.</p>
+                        </div>
+                    </div>
+                    <!-- End of 'thid' div-->
+                    <div class="third">
+                        <div class="service-icon">
+                            <img src="images/icons/2404067 - bookkeeping contract document grid paper pen treaty.png" alt="notebook icon">
+                        </div>
+                        <div class="service-details">
+                            <h4>sustainability</h4>
+                            <p>When it comes to sustainability & corporate responsibility, Complete with power and flexibility.</p>
+                        </div>
+                    </div>
+                    <!-- End of 'thid' div-->
+                    <div class="third">
+                        <div class="service-icon">
+                            <img src="images/icons/2404047 - business grid idea lamp light shine.png" alt="idea lamp icon">
+                        </div>
+                        <div class="service-details">
+                            <h4>performance</h4>
+                            <p>Helping you get the greatest strategic advantage from your data management environemnt.</p>
+                        </div>
+                    </div>
+                    <!-- End of 'thid' div-->
                 </div>
             </div>
             <!-- There are two halfs to the service section (Style first half first) -->
@@ -356,7 +394,7 @@
                     <h6>b</h6>
                 </div>
                 <div class="news-details">
-                    <h3>Our most popular rect Blog post. WE have done more than 10,000 projects in the short period time and all the projects are done</h3>  
+                    <h3>Our most popular rect Blog post. We have done more than 10,000 projects in the short period time and all the projects are done</h3>  
                     <button>
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                      more news
@@ -398,30 +436,98 @@
         </section>
         <section class="partners">
            <div class="wrapper">
-                <div class="fourth"><img src="images/logos/ANC_NewLogo_EPS.png" alt="groupM logo"></div>
+                <div class="fourth"><img src="images/logos/GroupM_SingleColor_Logo_Black_RGB_0_png.png" alt="groupM logo"></div>
                 <div class="fourth"><img src="images/logos/logo-oxfam-.png" alt="Oxfam"></div>
                 <div class="fourth"><img src="images/logos/ANC_NewLogo_EPS.png" alt="ANC logo"></div>
                 <div class="fourth"><img src="images/logos/VMware.png" alt="VMware"></div>
            </div>
         </section>
-        <section class="contact-us">
-            <div class="wrapper">
-                <div class="third"></div>
-                <div class="third"></div>
-                <div class="third"></div>
-            </div>
-        </section>
     </main>
     <footer>
+        <section class="footer-contact">
+            <div class="wrapper">
+                <div class="foot-contact-info">
+                    <div class="foot-email">
+                        <img src="images/icons/mail.png" alt="mail">
+                        <p><a href="#">Advisory@gmail.com</a></p>
+                    </div>
+                    <div class="foot-phone">
+                        <img src="images/icons/phone-call.png" alt="phone">
+                        <p><a href="#">+88 01912704287</a></p>
+                    </div>
+                    <div class="foot-office">
+                        <img src="images/icons/pin.png" alt="location pin">
+                        <p><a href="#">143, NewYork, NY 10018</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="footer-contact-accent">
+                </div>
+            </div>
+        </section>
         <div class="wrapper">
-            <div>
-                <form action="">
-                    <input type="text">
+            <div class="footer-co-info">
+                <div class="footer-logo">
+                    <div class="company-info-img">
+                        <img src="images/icons/2398145 - app locked mobile open line safe secured security.png" alt="Advisory Logo">
+                    </div>
+                    <div class="company-info-info">
+                        <h3>advisor
+                            <span>y</span>
+                        </h3>
+                        <p>perfect business solutions</p>
+                    </div>
+                </div>
+                <div class="company-vision">
+                    <p>
+                        Our 20 years of experience we'll ensure you always get the best guidance. We serve a clients at every level of their organization we can be most whether as trusted advisor.
+                    </p>
+                </div>
+                <form action="#">
+                    <label for="newsletter">Receive news right on your email</label>
+                    <input type="text" name="newsletter" class="newsletter" placeholder="your email">
                     <button></button>
                 </form>
             </div>
-            <div>
+            <div class="quick-links">
+                <h3>our quick focus</h3>
                 <ul>
+                    <li><a href="#">business transformation</a></li>
+                    <li><a href="#">business growth</a></li>
+                    <li><a href="#">sustainability</a></li>
+                    <li><a href="#">performance</a></li>
+                    <li><a href="#">customer insights</a></li>
+                    <li><a href="#">b2b consulting</a></li>
+                    <li><a href="#">insurance consulting</a></li>
+                </ul>
+            </div>
+            <div class="latest-news">
+                <h3>latest news</h3>
+                <div class="link-news">
+                    <p>
+                        <a href="#">Business processes are fundamental to every company</a>
+                    </p>
+                    <p>November 12,2017</p>
+                </div>
+                <div class="link-news">
+                    <p>
+                        <a href="#">Business processes are fundamental to every company</a>
+                    </p>
+                    <p>November 12,2017</p>
+                    <button>
+                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        get a quote
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <div class="wrapper">
+                <div class="rights">
+                    <p>copyright 2017, all rights reserved, 360degree</p>
+                </div>
+                <ul class="foot-social">
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
@@ -430,10 +536,6 @@
                     <li><a href="#"></a></li>
                     <li><a href="#"></a></li>
                 </ul>
-            </div>
-            <div>
-                <div class="link-news"><a href=""></a></div>
-                <div class="link-news"><a href=""></a></div>
             </div>
         </div>
     </footer>
