Media Query 940px mostly done

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h3>advisor
                             <span>y</span>
                         </h3>
-                        <p>perfect business soltions</p>
+                        <p>perfect business solutions</p>
                     </div>
                 </div>
                 <div class="company-info-item">
@@ -80,7 +80,7 @@
                         </div>
                         <div class="company-info-info">
                             <h4>opening time</h4>
-                            <p>mon-fri 10.00 to 19:00</p>
+                            <p>mon-fri 10.00 to 19.00</p>
                         </div>
                     </div>
                 </div>
@@ -382,7 +382,7 @@
                 <div class="vp-statement">
                     <p>Our consultants, engineers and architects bring deep industry and technical knowledge to each engagement based on years of experince helping companies around the world adopt softward and get strategic.</p>
                     <h4>mahufuz riad</h4>
-                    <p>funder vp</p>
+                    <p>funder VP</p>
                 </div>
             </div>
         </section>
@@ -486,8 +486,11 @@
                 </div>
                 <form action="#">
                     <label for="newsletter">Receive news right on your email</label>
-                    <input type="text" name="newsletter" class="newsletter" placeholder="your email">
-                    <button></button>
+                    <div class="news-subscribe">
+                        <input type="text" name="newsletter" class="newsletter" placeholder="Your email">
+                        <button><i class="fa fa-paper-plane" aria-hidden="true"></i>
+                        </button>
+                    </div>
                 </form>
             </div>
             <div class="quick-links">
