--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Advisory</title>
     <!-- Link to External CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins|Source+Sans+Pro" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Poppins|Source+Sans+Pro" rel="stylesheet">
     <!-- animations -->
     <link rel="stylesheet" href="styles/animate.css">
 </head>
@@ -89,6 +89,9 @@
         </div> <!--End of Company Info-->
         <nav class="page-nav">
             <div class="wrapper">
+                <div class="hamburger">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </div>
                 <ul class="page-nav-menu">
                     <li>
                         <a href="#">home</a>
@@ -242,37 +245,36 @@
                 <div class="half">
                     <div class="third">
                         <div class="service-icon">
-                            <img src="images/icons/2404044 - calendar date every day grid month schedule year.png" alt="calendar icon">
+                            <img src="images/icons/2404051 - graph grid infographic line management statistics stats.png" alt="bar graph">
                         </div>
                         <div class="service-details">
-                            <h4>business growth</h4>
-                            <p>Helping you get the greatest strategic advantage from your data management environment.</p>
+                            <h4>finance consulting</h4>
+                            <p>Finance consulting Helping you get the greatest strategic advanage from your data management</p>
                         </div>
                     </div>
                     <!-- End of 'thid' div-->
                     <div class="third">
                         <div class="service-icon">
-                            <img src="images/icons/2404067 - bookkeeping contract document grid paper pen treaty.png" alt="notebook icon">
+                            <img src="images/icons/2404065 - a arm get grid hand percent percentage.png" alt="hand icon with a percentage symbol">
                         </div>
                         <div class="service-details">
-                            <h4>sustainability</h4>
-                            <p>When it comes to sustainability & corporate responsibility, Complete with power and flexibility.</p>
+                            <h4>insurance consulting</h4>
+                            <p>Insurance consulting When it comes to sustainability & corporate responsibility, -bility,</p>
                         </div>
                     </div>
                     <!-- End of 'thid' div-->
                     <div class="third">
                         <div class="service-icon">
-                            <img src="images/icons/2404047 - business grid idea lamp light shine.png" alt="idea lamp icon">
+                            <img src="images/icons/2404045 - backpack bag briefcase business portfolio grid portfolio suitcase.png" alt="briefcase">
                         </div>
                         <div class="service-details">
-                            <h4>performance</h4>
-                            <p>Helping you get the greatest strategic advantage from your data management environemnt.</p>
+                            <h4>B2B consulting</h4>
+                            <p>B@B Helping you get the greatest strategic advanage from your data mangement environment.</p>
                         </div>
                     </div>
                     <!-- End of 'thid' div-->
                 </div>
             </div>
-            <!-- There are two halfs to the service section (Style first half first) -->
         </section> <!-- End of 'services' section-->
         <article class="rational">
             <div class="wrapper">
@@ -545,5 +547,10 @@
     
     <!-- Font Awesome CDN -->
     <script src="https://use.fontawesome.com/c0796f8a2a.js"></script>
+    <script>
+        $("hamburger").click(function () {
+            $(this).addClass("");
+        });
+    </script>
 </body>
 </html>
