ALMOST THERE, RESPONSIVENESS WORKING, MISSING JAVA

--- a/index.html
+++ b/index.html
@@ -385,6 +385,11 @@
                     <p>Our consultants, engineers and architects bring deep industry and technical knowledge to each engagement based on years of experince helping companies around the world adopt softward and get strategic.</p>
                     <h4>mahufuz riad</h4>
                     <p>funder VP</p>
+                    <div class="statement-nav">
+                        <div class="tab"></div>
+                        <div class="tab"></div>
+                        <div class="tab"></div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -533,13 +538,40 @@
                     <p>copyright 2017, all rights reserved, 360degree</p>
                 </div>
                 <ul class="foot-social">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-google" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <i class="fa fa-dribbble" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-vine" aria-hidden="true"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
